--- a/src/pages/Homepage/components/MovieCard/MovieCard.style.css
+++ b/src/pages/Homepage/components/MovieCard/MovieCard.style.css
@@ -14,6 +14,10 @@
   color: white;
   font-weight: bold;
   overflow-wrap: break-word;
+  padding: 10px;
+  h3 {
+    margin: 0;
+  }
 }
 
 .overlay:hover {
