--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -14,7 +14,8 @@
   color: white;
   font-weight: bold;
   overflow-wrap: break-word;
-  padding: 10px;
+  padding: 20px;
+  padding-top: 45px;
   h3 {
     margin: 0;
   }
