--- a/src/layout/NavBar.style.css
+++ b/src/layout/NavBar.style.css
@@ -1,1 +1,8 @@
-
+.custom-navbar {
+  background: linear-gradient(
+    to bottom,
+    rgba(20, 20, 20, 0.5),
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0)
+  );
+}
