--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -1,9 +1,10 @@
 .movie-card {
-  width: 200px;
-  height: 310px;
+  width: 210px;
+  height: 290px;
   background-size: cover;
   cursor: pointer;
   transition: 0.5s;
+  border-radius: 8%;
 }
 .overlay {
   width: 100%;
@@ -16,6 +17,8 @@
   overflow-wrap: break-word;
   padding: 20px;
   padding-top: 45px;
+  border-radius: 8%;
+
   h3 {
     margin: 0;
   }
@@ -23,9 +26,11 @@
 
 .overlay:hover {
   opacity: 1;
+  border-radius: 10%;
 }
 
 .movie-card:hover {
-  transform: scale(1.3) translateZ(20px);
+  transform: scale(1.2) translateZ(20px);
   z-index: 2;
+  border-radius: 10%;
 }
