style : 모바일환경 뮤비카드 중앙정렬설정

--- a/src/pages/Homepage/HomPage.style.css
+++ b/src/pages/Homepage/HomPage.style.css
@@ -1,3 +1,17 @@
 .slide-container {
-  padding-left: 20px;
+  padding: 20px;
+}
+
+/* 태블릿(1024px 이하)에서의 스타일 */
+@media (max-width: 1024px) {
+  .slide-container {
+    padding: 0px;
+  }
+}
+
+/* 모바일(464px 이하)에서의 스타일 */
+@media (max-width: 464px) {
+  .slide-container {
+    padding: 0px;
+  }
 }
