feat : 디테일페이지 작업중

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-Layout {
   background-color: #000;
   color: white;
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%; /*100vh 시 화면크기 깨짐*/
+  height: auto;
 }
