--- a/src/pages/Movies/MoviesPage.style.css
+++ b/src/pages/Movies/MoviesPage.style.css
@@ -1,3 +1,24 @@
 .search-page-container {
-  padding: 100px;
+  padding-top: 100px;
+}
+
+.movie-contents {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.genre-list {
+}
+
+.movie-card-list {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
