--- a/src/pages/MovieDetail/movieDetailPage.style.css
+++ b/src/pages/MovieDetail/movieDetailPage.style.css
@@ -15,6 +15,7 @@
 .poster-section {
   height: 750px;
   width: 50%;
+  min-width: 400px;
   background-repeat: no-repeat;
   background-size: contain;
   overflow: hidden;
@@ -23,6 +24,7 @@
 .info-section {
   padding: 5px;
   width: 50%;
+  min-width: 400px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -64,4 +66,61 @@
 .review-btn-box {
   display: flex;
   gap: 10px;
+}
+
+.overview-box {
+  overflow: hidden; /* 넘치는 텍스트는 숨김 처리 */
+  text-overflow: ellipsis;
+}
+
+@media (max-width: 1200px) {
+  .detail-page-container {
+    padding: 100px 0px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .detail-page-container {
+    padding: 100px 0px;
+  }
+  .overview-box {
+    font-size: 20px;
+  }
+
+  .detail-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .poster-section {
+    background-size: cover;
+    width: 90%;
+    height: 550px;
+  }
+  .info-section {
+    width: 100%;
+  }
+}
+
+@media (max-width: 464px) {
+  .detail-page-container {
+    padding: 100px 0px;
+  }
+  .overview-box {
+    font-size: 20px;
+  }
+
+  .detail-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .poster-section {
+    background-size: cover;
+    width: 100%;
+    height: 350px;
+  }
+  .info-section {
+    width: 100%;
+  }
 }
