--- a/src/pages/MovieDetail/movieDetailPage.style.css
+++ b/src/pages/MovieDetail/movieDetailPage.style.css
@@ -48,7 +48,7 @@
 }
 
 .details-review {
-  padding: 10px;
+  padding-top: 20px;
 }
 
 .overview-box {
@@ -66,6 +66,8 @@
 .review-btn-box {
   display: flex;
   gap: 10px;
+  border-top: 1px solid rgb(139, 139, 139);
+  padding-top: 10px;
 }
 
 .overview-box {
