--- a/src/pages/MovieDetail/movieDetailPage.style.css
+++ b/src/pages/MovieDetail/movieDetailPage.style.css
@@ -37,8 +37,8 @@
     font-size: 48px;
   }
   span {
-    color: rgb(157, 155, 155);
-    font-size: 16px;
+    color: #838282;
+    font-size: 15px;
   }
 }
 
