--- a/src/pages/MovieDetail/components/Poster.style.css
+++ b/src/pages/MovieDetail/components/Poster.style.css
@@ -1,7 +1,7 @@
 .poster-overlay {
   width: 100%;
   height: 97%;
-  background: rgba(43, 41, 41, 0.5);
+  background: rgb(7, 12, 14);
   opacity: 0;
   transition: all 0.2s;
   color: white;
